backend url for socket

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -28,7 +28,7 @@
 
   <script src="/socket.io/socket.io.js"></script>
   <script>
-    const socket = io();
+    const socket = io('https://nip-backend.kncklab.com:3000');
     let myName;
 
     function login() {
