fix socket io issues

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,7 +26,7 @@
     <p id="status"></p>
   </div>
 
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://cdn.socket.io/4.7.5/socket.io.min.js"></script>
   <script>
     const socket = io('https://nip-backend.kncklab.com:3000');
     let myName;
