--- a/frontend/index.html
+++ b/frontend/index.html
@@ -117,6 +117,14 @@
 
     <!-- Notifications -->
     <div id="notification" class="fixed bottom-4 left-1/2 transform -translate-x-1/2 bg-gray-800 text-white px-4 py-2 rounded-lg shadow-lg hidden opacity-0 transition-opacity duration-300"></div>
+    
+    <!-- Connection Status -->
+    <div id="connectionStatus" class="fixed bottom-4 right-4 bg-gray-800 text-white px-3 py-1 rounded-lg shadow-lg text-xs opacity-70 hidden">
+      <div class="flex items-center">
+        <span id="connectionDot" class="w-2 h-2 bg-green-400 rounded-full mr-2"></span>
+        <span id="connectionText">Verbunden</span>
+      </div>
+    </div>
   </div>
 
   <script src="app.js"></script>
